@@ -27,6 +27,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #21580: Now Tkinter correctly handles bytes arguments passed to Tk.
+  In particular this allows to initialize images from binary data.
+
 - Issue #17172: Make turtledemo start as active on OS X even when run with
   subprocess.  Patch by Lita Cho.
 
